--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-helmet": "^5.2.1",
     "react-scripts": "3.0.1"
   },
-  "homepage": "http://diaaanek.github.io/ecomm",
+  "homepage": "https://diaaanek.github.io/e-comm",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
